force-app/main/default/objects/vlocity_ps__ContractLineItem__c/vlocity_ps__ContractLineItem__c.object-meta.xml
<CustomObject>
    <label>Contract Line Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>