force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AccountId__c</fullName>
    <formula>CASESAFEID(vlocity_ps__ContractId__r.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>