force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContractEndDate__c</fullName>
    <formula>vlocity_ps__ContractId__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>