force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__ContractGroupId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContractGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Group</label>
    <referenceTo>vlocity_ps__ContractGroup__c</referenceTo>
    <relationshipName>ContractLines</relationshipName>
    <type>Lookup</type>
</CustomField>