force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__ContractId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContractId__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>ContractLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>