force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContractStartDate__c</fullName>
    <formula>vlocity_ps__ContractId__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>