force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__ContractStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContractStatus__c</fullName>
    <formula>TEXT(vlocity_ps__ContractId__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>