force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EffectiveStartDate__c</fullName>
    <description>Start date of line item</description>
    <label>Effective Start Date</label>
    <type>DateTime</type>
</CustomField>