force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__JSONAttribute__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__JSONAttribute__c</fullName>
    <description>DEPRECATED. Use AttributesData instead.</description>
    <label>JSONAttribute - Deprecated</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>