force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__LineNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__LineNumber__c</fullName>
    <description>Vlocity line number generated by code which serves to sequence the line items and organize them into a hierarchy.</description>
    <label>LineNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>