force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__PricebookEntryId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PricebookEntryId__c</fullName>
    <description>Price book entry identifier</description>
    <label>Price book Entry Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>