force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__PricingLogData__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PricingLogData__c</fullName>
    <label>Pricing Log Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>