force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__ProductCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProductCode__c</fullName>
    <description>Formula: Product Code from the associated product.</description>
    <formula>vlocity_ps__Product2Id__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>