force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProductDescription__c</fullName>
    <description>Formula: Product Description from the associated product.</description>
    <formula>vlocity_ps__Product2Id__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>