force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__ProductName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProductName__c</fullName>
    <formula>vlocity_ps__Product2Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>