force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__ProductNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProductNumber__c</fullName>
    <label>Product Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>