force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__Quantity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Quantity__c</fullName>
    <description>Product Quantity</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>