force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__QuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__QuoteLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipName>ContractLines</relationshipName>
    <type>Lookup</type>
</CustomField>