force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SubscriptionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Subscription that this item describes.</description>
    <label>Subscription</label>
    <referenceTo>vlocity_ps__Subscription__c</referenceTo>
    <relationshipName>ContractLines</relationshipName>
    <type>Lookup</type>
</CustomField>