force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__TotalPrice__c</fullName>
    <description>Total Price</description>
    <formula>vlocity_ps__Quantity__c *   vlocity_ps__UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>