force-app/main/default/objects/vlocity_ps__ContractLineItem__c/fields/vlocity_ps__UoM__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__UoM__c</fullName>
    <label>Unit of Measure</label>
    <length>25</length>
    <type>Text</type>
</CustomField>