force-app/main/default/objects/vlocity_ps__ContractLineItem__c/validationRules/vlocity_ps__ValidateEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__ValidateEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>DATEVALUE(vlocity_ps__EffectiveEndDate__c)  &gt;  vlocity_ps__ContractId__r.EndDate</errorConditionFormula>
    <errorMessage>Contract Line Item Effective End Date has to be earlier than Contract End Date</errorMessage>
</ValidationRule>