force-app/main/default/objects/vlocity_ps__ContractLineItem__c/validationRules/vlocity_ps__ValidateStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__ValidateStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>DATEVALUE(vlocity_ps__EffectiveStartDate__c)  &lt;  vlocity_ps__ContractId__r.StartDate</errorConditionFormula>
    <errorMessage>Contract Line Item Effective Start Date has to be later than Contract Start Date</errorMessage>
</ValidationRule>